--- a/Applications/App/CMakeLists.txt
+++ b/Applications/App/CMakeLists.txt
@@ -70,7 +70,7 @@ set(${PROJECT_NAME}_FOLDER "App-${PROJECT_NAME}")
 set(APPLIB_NAME "q${PROJECT_NAME}")
 
 set(APPLIB_DESCRIPTION_SUMMARY
-  "Customized version of slicer for Ninja"
+  "Customized version of slicer for iVSPlan"
   )
 
 set(APPLIB_SRCS
