--- a/Modules/Loadable/CMakeLists.txt
+++ b/Modules/Loadable/CMakeLists.txt
@@ -18,6 +18,7 @@
 
 # List all the modules (ordered by dependencies ) to build by Slicer
 set(modules
+  CameraPath
   )
 
 set(${APPLICATION_NAME}_MODULES)
