ENH: Scripted Module test for CameraPath

--- a/Modules/Scripted/CMakeLists.txt
+++ b/Modules/Scripted/CMakeLists.txt
@@ -17,6 +17,7 @@
 #============================================================================
 
 set(modules
+  testCameraPath
   )
 
 set(${APPLICATION_NAME}_MODULES)
