--- a/Modules/Loadable/CameraPath/MRML/CMakeLists.txt
+++ b/Modules/Loadable/CameraPath/MRML/CMakeLists.txt
@@ -5,6 +5,8 @@ set(KIT ${PROJECT_NAME})
 set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_MRML_EXPORT")
 
 set(${KIT}_INCLUDE_DIRECTORIES
+  ${Slicer_Base_INCLUDE_DIRS}
+  ${MRMLCore_INCLUDE_DIRS}
   )
 
 set(${KIT}_SRCS
